# SleepWake

./: .gitignore  CMakeLists.txt  README.md
agent/: CMakeLists.txt
agent/src/core/: main.cpp
agent/src/models/: ActivitySession.hpp  ActivitySnapshot.hpp
agent/src/processTracker/: ProcessTracker.cpp  ProcessTracker.hpp
agent/src/sessionManager/: SessionManager.cpp  SessionManager.hpp
agent/src/storage/: Database.cpp  Database.hpp  SessionRepository.cpp  SessionRepository.hpp
